--- a/Scores/1.1 - Booze for The Emperor's Head.md
+++ b/Scores/1.1 - Booze for The Emperor's Head.md
@@ -83,7 +83,7 @@ Seeing Weaver disappear between buildings, Zamira signals Kaslyn who starts wind
 
 ### Wrap up
 
-We didn't really establish a target properly for this job - we're not going after a faction, but a specific pub in Charhollow territory. We'll say the injured part is *the citizens of Charhollow*, and in fact I'm going to retcon that final complication. The Bluecoats will definitely be unhappy with our Gang, but we'll add a new Tier 1 faction for the Charhollow citizenry and set them to -1 since we stole from their local and much beloved pub [[LOCATION-Kellen's]].
+We didn't really establish a target properly for this job - we're not going after a faction, but a specific pub in Charhollow territory. We'll say the injured party is *the citizens of Charhollow*, and in fact I'm going to retcon that final complication. The Bluecoats will definitely be unhappy with our Gang, but we'll add a new Tier 1 faction for the Charhollow citizenry and set them to -1 since we stole from their local and much beloved pub [[LOCATION-Kellen's]].
 
 
 **Crew XP:** 3
