--- a/Scores/1.2 Downtime.md
+++ b/Scores/1.2 Downtime.md
@@ -13,3 +13,21 @@ Relation with [[FACTION-The Citizens of Charhollow]] set to -1
 **Rep:** Heat (1 x 3) + Tier (1) = **4 rep**
 
 ### Entanglements
+
+**The Usual Suspects:** The Bluecoats, not needing much of an excuse, pay [[NPC-Hoxley]] a visit to see if they can beat any information out of him on who carried out this blatant heist in the middle of a crowded street.
+Fortune rolls. Hoxley has 3 dice since he's an experienced smuggler with an existing grudge against the Bluecoats, he knows the worst he'll get is a beating. The Bluecoats are fishing, this is more of an excuse to go beat up someone they don't like than a serious piece of intelligence gathering.
+- Hoxley: 4,5,1
+- Bluecoats: 6
+Looks like Hoxley lets something slip. The Bluecoats really do put two and two together and now they strongly suspect the Sparrows were the ones looking for uniforms. I think that gets us another -1 with them.
+
+### Vice
+
+Weaver - indulges vice to clear his 7 stress.
+Consequence: 4 - face an entanglement
+I think Weaver notices on the way back to his vice provider that he's being clumsily tailed. He's going to roll on Consort to see if there's anyone at the club who can help provide a distraction or sow confusion when he leaves.
+**Consort:** 4 - Success with a consequence
+It works, the friend leaves wearing Weaver's hat and the tail follows him. Weaver manages to slip away back to the HQ. The consequence will be that the Bluecoats won't underestimate him again. Next time the tail will be unspottable barring a crit.
+
+### Activities
+
+Weaver starts a project to replicate the Skolvan skullsplitter. It's not too hard, but needs careful testing and you can't do that quickly. A single 8 clock.
